# Tutoring-Ops-Dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: claude.md  settings.local.json
.github/workflows/: ci.yml
data/: sessions.csv  student_progress.csv  students.csv  subjects.csv  tutors.csv  warehouse.db
dev/: claude.md  settings.local.json
docs/: data_model.md  metrics.md
src/dashboard/: app.py
src/dashboard/data/: generate_fake_data.py  load_sqlite.py  metrics.py
tests/: test_placeholder.py
